--- a/index.html
+++ b/index.html
@@ -1,62 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-US-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">">
-    <link rel="stylesheet" href="style.css">
-    <title>Portfolio</title>
-</head>
-<body>
-    <header id="header">
-        <div class="logo">
-            <a href="#" id="logo">LOGO</a>
-        </div>
-        <input type="checkbox" id="click">
-        <label for="click" class="mainicon">
-            <div class="menu" id="menu">
-                <i class="bi bi-list nav-hover"></i>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-US-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">">
+        <link rel="stylesheet" href="style.css">
+        <title>Abhijith B</title>
+    </head>
+    <body>
+        <header id="header">
+            <div class="logo">
+                <!-- <img src="" alt=""> -->
+                <a href="" id="logo">Portfolio</a>
             </div>
-        </label>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Skills</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Contact</a>
-        </nav>
-    </header>
+            <input type="checkbox" id="click">
+            <label for="click" class="mainicon">
+                <div class="menu" id="menu">
+                    <i class="bi bi-list nav-hover"></i>
+                </div>
+            </label>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="https://personal-portfolio-kappa-weld.vercel.app/#Home">About</a>
+                <a href="https://www.github.com/abhi-jithb//">Skills</a>
+                <a href="index.html">Portfolio</a>
+                <a href="https://wa.me/message/GJL275RDKR3UF1">Messegeme</a>
+            </nav>
+        </header>
 
-    <section>
-        <div class="main">
-            <div class="image">
-                <div class="blue-bg-outer">
-                    <div class="white-bg">
-                        <div class="blue-bg">
-                            <img src="image.jpg" alt="">
+        <section>
+            <div class="main">
+                <div class="image">
+                    <div class="blue-bg-outer">
+                        <div class="white-bg">
+                            <div class="blue-bg">
+                                <img src="profile.jpg" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="Information">
-                <h1>Hi, I'm Abhijith B</h1>
-                <div class="animated_text">
-                    <h1 class="title">Front-end developer</h1>
+                <div class="Information">
+                    <h1>Hi, I'm Abhijith B</h1>
+                    <div class="animated_text">
+                        <h1 class="title">Front-end developer</h1>
+                    </div>
+                    <p><i>"Lets build Networking"... connect with me 😊👇</p>
+                    <div class="social">
+                        <a href="www.linkedin.com/in/abhijith-b-30244b282">
+                            <i class="bi bi-linkedin"></i>
+                        </a>
+                        <a href="https://www.github.com/abhi-jithb//">  <i class="bi bi-github"></i> </a>
+                        <a href="https://wa.me/message/GJL275RDKR3UF1"><i class="bi bi-whatsapp"></i></a>
+                        <a href="www.facebook.com"><i class="bi bi-facebook"></i></a>
+                        <a href="https://www.instagram.com/abhijith.b_/">
+                            <i class="bi bi-instagram"></i>
+                        </a>
+                    </div>
+                    <button action="target" class="cv-btn">Download CV</button>
                 </div>
-                <p>Connect me ...</p>
-                <div class="social">
-                    <a href="#"><i class="bi bi-linkedin"></i></a>
-                    <a href="#"><i class="bi bi-github"></i></a>
-                    <!-- <a href="#"><i class="bi bi-whatsapp"></i></a> -->
-                    <!-- <a href="#"><i class="bi bi-facebook"></i></a> -->
-                    <a href="#"><i class="bi bi-instagram"></i></a>
-                </div>
-                <button class="cv-btn">Download CV</button>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <script src="script.js"></script>
-</body>
+        <script src="script.js"></script>
+    </body>
 </html>
