--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-US-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
         <link rel="stylesheet" href="style.css">
         <title>Abhijith B</title>
     </head>
@@ -47,12 +47,12 @@
                     </div>
                     <p><i>"Lets build Networking"... connect with me 😊👇</p>
                     <div class="social">
-                        <a href="www.linkedin.com/in/abhijith-b-30244b282">
+                        <a href="https://www.linkedin.com/in/abhijith-b-30244b282/">
                             <i class="bi bi-linkedin"></i>
                         </a>
                         <a href="https://www.github.com/abhi-jithb//">  <i class="bi bi-github"></i> </a>
                         <a href="https://wa.me/message/GJL275RDKR3UF1"><i class="bi bi-whatsapp"></i></a>
-                        <a href="www.facebook.com"><i class="bi bi-facebook"></i></a>
+                        <a href="https://www.facebook.com/abhijith.b.7927"><i class="bi bi-facebook"></i></a>
                         <a href="https://www.instagram.com/abhijith.b_/">
                             <i class="bi bi-instagram"></i>
                         </a>
